# dame_de_pique

./: .gitignore  Cargo.toml  README.md  network.json
.devcontainer/: Dockerfile  devcontainer.json
CardGame/: .gitignore  App.tsx  app.json  metro.config.js  network.json  package-lock.json  package.json
CardGame/src/app/clients/: game_client.ts  lobby_client.ts
CardGame/src/app/components/: Game.tsx  GameLobby.tsx  Login.tsx
CardGame/src/app/config/: Config.ts
CardGame/src/app/models/: Card.tsx  Deck.tsx  TeamPoints.tsx
CardGame/src/app/navigations/: AppNavigation.tsx
CardGame/src/app/styles/: game_styles.ts
containers/: Dockerfile  network.json  startup.txt
game/: Cargo.toml
game/src/: lib.rs
game/src/gameplay/: gameplay.rs
game/src/partners/: partners.rs
game/tests/: game_integration_tests.rs
server/: Cargo.toml
server/src/: config.rs  handler.rs  main.rs  models.rs  ws.rs
server/src/gameplay/: mod.rs
server/src/gameplay/handlers/: gameplay_handlers.rs  mod.rs
server/src/gameplay/models/: gameplay_models.rs  mod.rs
src/: deck.rs  gameplay.rs  lib.rs  main.rs  player.rs
src/error/: error.rs  mod.rs
src/game/: gameplay.rs  mod.rs  partners.rs
src/partners/: mod.rs  partners.rs
tests/: game_integration_tests.rs  integration_tests.rs
