[package]
name = "dame_de_pique"
version = "0.1.0"
authors = ["Pierre Seguin <pseguin2011@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card_game_engine = {git = "https://github.com/pseguin2011/card_game_engine"}
rand = "0.7.3"
rocket = "0.4.5"