[package]
name = "game"
version = "0.1.0"
authors = ["Pierre <pseguin2011@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card_game_engine = {git = "https://github.com/pseguin2011/card_game_engine", version = '0.1.2'}
rand = "0.7.3"