[package]
name = "server"
version = "0.1.0"
authors = ["Pierre <pseguin2011@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
env_logger = "0.7.1"
futures = "0.3.5"
game={path="../game"}
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
tokio = { version = "0.2.22", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
warp = "0.3.3"
